force-app/main/default/objects/Vendor_Trade_Rate_Management__c/Vendor_Trade_Rate_Management__c.object-meta.xml
<CustomObject>
    <label>Vendor Trade Rate Management</label>
    <nameField>
        <displayFormat>VTRM-{00000}</displayFormat>
        <label>Vendor Trade Rate Management Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors Trade Rate Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>