force-app/main/default/objects/Vendor_Trade_Rate_Management__c/fields/After_Hours_Rate__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Rate__c</fullName>
    <label>After Hours Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>