force-app/main/default/objects/Vendor_Trade_Rate_Management__c/fields/Holiday_Rate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Rate__c</fullName>
    <label>Holiday Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>