force-app/main/default/objects/Vendor_Trade_Rate_Management__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendors Trade Rate Management</relationshipLabel>
    <relationshipName>Vendors_Trade_Rate_Management</relationshipName>
    <type>Lookup</type>
</CustomField>