force-app/main/default/objects/Vendor_Trade_Rate_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trade__c</columns>
    <columns>Vendor__c</columns>
    <columns>Regular_Rate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>